repurpose for puck

--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,8 @@ header {
     text-align: center;
     color: #fff;
     background: #18bc9c;
+    background: url('../img/green-forest.jpg') no-repeat 50% 50%;
+    background-size: cover;
 }
 
 header .container {
