--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,15 +9,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>We are an energetic folk quintet, performing with energy, improvisation and love.</p>
+                    <p>We met met when working on Deafintely Theatre's 2014 production of A Midummer Nights Dream, performed at Shakespeare’s Globe. We accompanied the action (performed in British Sign Language) with a full non-stop live score, to wide acclaim. </p>
+                    <p>After a solid month of rehearsing, improvising, laughing, crying (from laughter), creating and collaborating we became very close, and emerged from theatre with a set of beautiful songs, energetic jigs, flamenco flourishes, foot-tapping swing numbers and raucous tango jams. More than that we had discovered a strong musical bond, and passion for playing together which seemed a shame to waste! And so, inspired by the show, Puck was born.</p>
                 </div>
             </div>
         </div>
