--- a/_includes/recordings_grid.html
+++ b/_includes/recordings_grid.html
@@ -1,10 +1,10 @@
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section id="recordings">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Recordings</h2>
                     <hr class="star-primary">
             </div>
             <div class="row">
@@ -16,7 +16,7 @@
                                     <i class="fa fa-search-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
+                            <img src="img/play.png" class="img-responsive" alt="{{ post.alt }}">
                         </a>
                     </div>
                 {% endfor %}
