--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
     {% include about.html %}
-    {% include portfolio_grid.html %}
+    {% include recordings_grid.html %}
     {% include contact.html %}
 
 
