--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,20 +38,15 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-6">
                     <img class="img-responsive" src="img/puck.jpg" alt="">
+                </div>
+                <div class="col-lg-12">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
-                        <hr class="star-light">
                         <span class="skills">{{ site.description }}</span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-<!--
-        {% for page in site.pages %}
-          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
-        {% endfor %}
- -->
-`
