--- a/_includes/recordings_grid.html
+++ b/_includes/recordings_grid.html
@@ -11,12 +11,12 @@
                 {% for post in site.posts %}
                     <div class="col-sm-4 portfolio-item">
                         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                            <img src="img/play.png" class="img-responsive" style="margin:auto" alt="{{ post.alt }}">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    <p>{{ post.title }}</p>
                                 </div>
                             </div>
-                            <img src="img/play.png" class="img-responsive" alt="{{ post.alt }}">
                         </a>
                     </div>
                 {% endfor %}
