de-modal the recordings and add player bios

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,10 +8,32 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-8 col-lg-offset-2">
                     <p>We are an energetic folk quintet, performing with energy, improvisation and love.</p>
                     <p>We met met when working on Deafintely Theatre's 2014 production of A Midummer Nights Dream, performed at Shakespeare’s Globe. We accompanied the action (performed in British Sign Language) with a full non-stop live score, to wide acclaim. </p>
                     <p>After a solid month of rehearsing, improvising, laughing, crying (from laughter), creating and collaborating we became very close, and emerged from theatre with a set of beautiful songs, energetic jigs, flamenco flourishes, foot-tapping swing numbers and raucous tango jams. More than that we had discovered a strong musical bond, and passion for playing together which seemed a shame to waste! And so, inspired by the show, Puck was born.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <h3>Charlotte Jolly on clarinet
+                    <p>A fantastic and versatile player best known for her improvisational work (Folie a Deux Femmes) which was recently featured on Radio 4, and her part in award winning art pop street marching band Perhaps Contraption. She trained at Trinity College of Music and in PUCK look forward to some bold and raunchy solos that you cannot help but move to!</p>
+                </div>
+                <div class="col-lg-4">
+                    <h3>Azita Mehdinejad on violin</h3>
+                    <p>n exciting and beautiful musician who has played with a number of groups, including a European tour with The Wishing Well, supporting Snow Patrol with Jonathan Ansell and shows at the Leicester Square Theatre with Theatre Libre. She trained at RWCMD, and for PUCK you can expect some wild, sexy and emotionally charged virtuosic violin.</p>
+                </div>
+                <div class="col-lg-4">
+                    <h3>Jon Whitten on guitar and vocals</h3>
+                    <p>A brilliant player, as well as a composer and songwriter, who has an incrediblly eclectic portfolio. This includes work with Blind Summit Theatre, new music ensemble JMT, guitar and vocal duo Frank and folk artist Sam Lee. He trained at SOAS and for PUCK will be strumming out some energetic gypsy style guitar and gracing us with his beautiful folk vocals.</p>
+                </div>
+                <div class="col-lg-4 col-lg-offset-2">
+                    <h3>Will Roberts on percussion</h3>
+                    <p>The fabulous rhythm maker Will has been part of a great number of exciting projects including work with Evelyn Glennie, Strangefruit, Sam Lee and headlining KOKO with Citadels. He trained at York University and has particular experience in Cuban, Brazillian and Jazz. For PUCK will be getting everyone dancing with his wide range of toe tapping percussive beats from all manner of instruments.</p>
+                </div>
+                <div class="col-lg-4">
+                    <h3>Philippa Herrick on vocals</h3>
+                    <p>Also the composer of the majority of PUCK's music. She works as a composer and musical director, particularly in theatre. Recently projects have been with Deafinitely Theatre, Gomito, Rash Dash and Sprite Productions. She is also musical director and songwriter for vintage swing group Elle & The Pocket Belles, who have performed around the UK and beyond.</p>
                 </div>
             </div>
         </div>
