--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,9 +38,11 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-lg-offset-3">
                     <img class="img-responsive" src="img/puck.jpg" alt="">
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
