--- a/_includes/recordings_grid.html
+++ b/_includes/recordings_grid.html
@@ -7,19 +7,13 @@
                     <h2>Recordings</h2>
                     <hr class="star-primary">
             </div>
-            <div class="row">
-                {% for post in site.posts %}
-                    <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-                            <img src="img/play.png" class="img-responsive" style="margin:auto" alt="{{ post.alt }}">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <p>{{ post.title }}</p>
-                                </div>
-                            </div>
-                        </a>
+            {% for post in site.posts %}
+                <div class="row">
+                    <div class="col-sm-4 portfolio-item" id="media-{{ post.modal-id }}">
+                        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ post.media-id }}&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+                        <p>{{ post.description }}</p>
                     </div>
-                {% endfor %}
-            </div>
+                </div>
+            {% endfor %}
         </div>
     </section>
