actually save the files this time

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <h3>Charlotte Jolly on clarinet
+                    <h3>Charlotte Jolly on clarinet</h3>
                     <p>A fantastic and versatile player best known for her improvisational work (Folie a Deux Femmes) which was recently featured on Radio 4, and her part in award winning art pop street marching band Perhaps Contraption. She trained at Trinity College of Music and in PUCK look forward to some bold and raunchy solos that you cannot help but move to!</p>
                 </div>
                 <div class="col-lg-4">
@@ -27,6 +27,8 @@
                     <h3>Jon Whitten on guitar and vocals</h3>
                     <p>A brilliant player, as well as a composer and songwriter, who has an incrediblly eclectic portfolio. This includes work with Blind Summit Theatre, new music ensemble JMT, guitar and vocal duo Frank and folk artist Sam Lee. He trained at SOAS and for PUCK will be strumming out some energetic gypsy style guitar and gracing us with his beautiful folk vocals.</p>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <h3>Will Roberts on percussion</h3>
                     <p>The fabulous rhythm maker Will has been part of a great number of exciting projects including work with Evelyn Glennie, Strangefruit, Sam Lee and headlining KOKO with Citadels. He trained at York University and has particular experience in Cuban, Brazillian and Jazz. For PUCK will be getting everyone dancing with his wide range of toe tapping percussive beats from all manner of instruments.</p>
