plumb in contact form

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,10 +3,7 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-6">
-                        <p>Forest photo by <a href="https://www.flickr.com/photos/nicholas_t/14925943820/">Nicholas A. Tonelli</a></p>
-                    </div>
-                    <div class="footer-col col-md-6">
+                    <div class="footer-col col-md-12">
                         <ul class="list-inline">
                             <li>
                                 <a href="https://www.facebook.com/pucktheband" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
@@ -23,6 +20,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
+                        Forest photo by <a href="https://www.flickr.com/photos/nicholas_t/14925943820/">Nicholas A. Tonelli</a> <br />
                         Copyright &copy; Puck 2014
                     </div>
                 </div>
